--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-session": "^1.17.3",
     "firebase-admin": "^11.3.0",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.20",
     "salted-md5": "^4.0.3",
     "sharp": "^0.31.2",
     "uuid": "^9.0.0"
