--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "salted-md5": "^4.0.3",
     "sharp": "^0.31.2",
     "uuid": "^9.0.0"
   }
